[UPDATE 0.0.2 : Pie Chart]
+ Pie chart is dynamic

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"dependencies": {
 		"chart-js-svelte": "file:",
-		"chart.js": "^4.4.7"
+		"chart.js": "^4.4.7",
+		"chartjs-plugin-datalabels": "^2.2.0"
 	}
 }
